# FinSight

./: .env.example  .gitignore  CMakeLists.txt  README.md
build_test/: CMakeCache.txt  Makefile  cmake_install.cmake  finsight_gui
build_test/.qt/: QtDeploySupport.cmake
build_test/finsight_core_autogen/: deps  moc_predefs.h
build_test/finsight_gui_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
build_test/finsight_gui_autogen/A3QQUPL3QZ/: moc_DashboardWindow.cpp  moc_DashboardWindow.cpp.d
build_test/finsight_gui_autogen/B23SIEQG5R/: moc_TransactionDialog.cpp  moc_TransactionDialog.cpp.d  moc_TransactionsWindow.cpp  moc_TransactionsWindow.cpp.d
build_test/finsight_gui_autogen/MXUWEOXILK/: moc_MainWindow.cpp  moc_MainWindow.cpp.d
build_test/finsight_gui_autogen/OJX5TXJZZM/: moc_BudgetsWindow.cpp  moc_BudgetsWindow.cpp.d
build_test/finsight_gui_autogen/QONQ2YFOM2/: moc_LoginDialog.cpp  moc_LoginDialog.cpp.d  moc_RegisterDialog.cpp  moc_RegisterDialog.cpp.d
build_test/finsight_gui_autogen/SD6NGM6J4I/: moc_AIInsightsWindow.cpp  moc_AIInsightsWindow.cpp.d
build_test/finsight_gui_autogen/Z5L7FJGVX6/: moc_ProfileWindow.cpp  moc_ProfileWindow.cpp.d
runtime_data/: budgets.tsv  categories.tsv  finsight.db  goals.tsv  investments.tsv  pantry.tsv  parsed_receipts.tsv  receipts.tsv  savings_entries.tsv  savings_goals.tsv  sessions.tsv  shopping.tsv  sidecar.json  transactions.tsv  users.tsv
runtime_data_terminal_demo/: finsight.db  sidecar.json
src/: main.cpp  main_test.cpp
src/apps/: client_main.cpp  server_main.cpp
src/core/managers/: FinanceTrackerBackend.cpp  FinanceTrackerBackend.h
src/core/models/: AI.h  Budget.h  Category.h  Common.h  Email.h  Goal.h  Investment.h  Receipt.h  Report.h  Savings.h  Session.h  Shopping.h  Transaction.h  User.h
src/core/services/: AIService.cpp  AIService.h  AnalyticsService.cpp  AnalyticsService.h  AuthService.cpp  AuthService.h  BudgetAlertService.cpp  BudgetAlertService.h  BudgetService.cpp  BudgetService.h  EmailService.cpp  EmailService.h  GoalService.cpp  GoalService.h  ReceiptService.cpp  ReceiptService.h  ReportService.cpp  ReportService.h  SavingsService.cpp  SavingsService.h  SessionService.cpp  SessionService.h  ShoppingService.cpp  ShoppingService.h  TransactionService.cpp  TransactionService.h
src/core/utils/: EnvLoader.cpp  EnvLoader.h
src/data/json/: TextCodec.cpp  TextCodec.h
src/data/storage/: BackendStore.cpp  BackendStore.h
src/gui/: FinSightUi.h  MainWindow.cpp  MainWindow.h  main_gui.cpp
src/gui/ai/: AIInsightsWindow.cpp  AIInsightsWindow.h
src/gui/auth/: LoginDialog.cpp  LoginDialog.h  RegisterDialog.cpp  RegisterDialog.h
src/gui/budgets/: BudgetsWindow.cpp  BudgetsWindow.h
src/gui/categories/: CategoriesWindow.cpp  CategoriesWindow.h
src/gui/dashboard/: DashboardWindow.cpp  DashboardWindow.h
src/gui/goals/: GoalsWindow.cpp  GoalsWindow.h
src/gui/investments/: InvestmentsWindow.cpp  InvestmentsWindow.h
src/gui/profile/: ProfileWindow.cpp  ProfileWindow.h
src/gui/receipts/: ReceiptsWindow.cpp  ReceiptsWindow.h
src/gui/reports/: ReportsWindow.cpp  ReportsWindow.h
src/gui/savings/: SavingsWindow.cpp  SavingsWindow.h
src/gui/transactions/: TransactionDialog.cpp  TransactionDialog.h  TransactionsWindow.cpp  TransactionsWindow.h
src/network/ai/: ChatCompletionClient.cpp  ChatCompletionClient.h
src/network/client/: Client.cpp  Client.h  HttpClient.cpp  HttpClient.h
src/network/email/: ResendEmailClient.cpp  ResendEmailClient.h
src/network/protocol/: JsonSerializer.cpp  JsonSerializer.h  Message.h
src/network/tcp/: BackendMessageHandler.cpp  BackendMessageHandler.h  IMessageHandler.h  TcpServer.cpp  TcpServer.h
tests/: CMakeLists.txt  backend_tests.cpp
